# competitive-programming

./: .gitignore  .pre-commit-config.yaml  README.md  mise.toml  pyproject.toml
.github/workflows/: generate_latex.yml
code/graph/: dfs.cpp  example_code.cpp
codes/dp/: coin_change.cpp  kadane.cpp  lis.cpp
codes/ds/: 4sum.cpp  lazy_segmenet_tree.cpp  monoqueue.cpp  monostack.cpp  segment_tree.cpp  tsp.cpp  ufds.cpp
codes/geometry/: sweep_line.cpp
codes/graph/: dijkstra.cpp
codes/math/: combinations.cpp
codes/strings/: kmp.cpp
generate_latex/: generate_notebook.py  generate_theoretical.py  template_notebook.tex
scripts/: generate_notebook.py
templates/: notebook.tex  theoretical.tex
theoretical/Progressions/: arithmetic.tex
