[tool.poetry]
name = "competitive-programming"
version = "0.1.0"
description = "My notebooks and guides for competitive programming contests."
authors = ["kyomi <me@kyomi.dev>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
