[project]
name = "competitive-programming"
version = "0.2.0"
description = "My notebooks and guides for competitive programming contests."
authors = [{ name = "kyomi", email = "me@kyomi.dev" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "click>=8.3.1",
  "rich>=14.2.0",
]

[dependency-groups]
dev = [
  "pre-commit>=4.5.0",
]

[tool.ruff]
# Ruff configuration:
# https://docs.astral.sh/ruff
required-version = "0.4.10"
target-version = "py312"

show-fixes = true
preview =  true
output-format = "full"

fix = true
line-length = 79

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "DTZ",
    "INP",
    "SIM",
    "PTH",
    "PERF",
]

[tool.ruff.lint.pycodestyle]
# pycodestyle configuration:
# https://docs.astral.sh/ruff/settings/#pycodestyle
max-doc-length = 72
max-line-length = 79

[tool.ruff.lint.mccabe]
# mccabe configuration:
# https://docs.astral.sh/ruff/settings/#mccabe
max-complexity = 5

[tool.ruff.lint.pydocstyle]
# pydocstyle configuration:
# https://docs.astral.sh/ruff/settings/#pydocstyle
convention = "numpy"

[tool.mypy]
# Mypy configuration:
# https://mypy.readthedocs.io/en/stable/config_file.html
strict = true
pretty = true

disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
